Added ACL handling and extended help functionality
Changes:
- New core module: slackminion.plugins.core.AuthManager
  - Responsible for providing acl and admin checks.
  - If not enabled, acls and admin_only=True for commands will be ignored
- New config option: bot_admins:
  - Users in this list will pass admin checks for commands where admin_only=True is set
- !help can now take a single argument - the name of the command
  - Without the argument, the first sentence of the command help is displayed for each command
  - With the argument, the entire command help is displayed
- Fixed handling of sigterm

Known Issues:
- Still no state persistence, so any ACLs defined using !acl will not survive a bot reboot

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -10,7 +10,15 @@ plugin_dir: plugins
 
 # Plugin list to load
 plugins:
+# Uncomment the following to enable ACL+admin checks
+#  - slackminion.plugins.core.AuthManager
   - slackminion.plugins.test.TestPlugin
+#  - slackminion.plugins.test.TestAclPlugin
+
+# Users who should be granted admin access
+# Only used if AuthManager is enabled
+bot_admins:
+  - someuser
 
 plugin_settings:
   TestPlugin:
