Added state saving for plugins
Changes:
- Plugin states are now saved on shutdown
  - FileStateHandler will save state to state.json in data_dir
- Admin commands can now be hidden from non-admins in !help
- Plugin loading has been moved from Bot to PluginManager

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -14,13 +14,19 @@ plugins:
 #  - slackminion.plugins.core.AuthManager
   - slackminion.plugins.test.TestPlugin
 #  - slackminion.plugins.test.TestAclPlugin
+  - slackminion.plugins.core.FileStateHandler
 
 # Users who should be granted admin access
 # Only used if AuthManager is enabled
 bot_admins:
   - someuser
 
+# Hide admin commands in !help from non-admins
+hide_admin_commands: True
+
 plugin_settings:
+  FileStateHandler:
+    data_dir: .
   TestPlugin:
     channel: botfactory
 
