--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "2.7"
 install:
-  - pip install -r requirements.txt
+  - python setup.py install
   - pip install pytest-cov codeclimate-test-reporter
 script:
   - cp config.yaml.example config.yaml
