--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "2.7"
 install:
   - python setup.py install
+  - pip install -U pytest
   - pip install pytest-cov codeclimate-test-reporter
 script:
   - cp config.yaml.example config.yaml
