--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-bottle==0.12.9
+Flask==0.10.1
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
 PyYAML==3.11
 requests==2.10.0
-Rocket==1.2.4
 six==1.10.0
 slackclient==1.0.0
+slackminion==0.7.3
 websocket-client==0.37.0
+Werkzeug==0.11.10
