--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,9 @@
 language: python
 python:
   - "2.7"
-install:
-  - python setup.py install
-  - pip install -U pytest
-  - pip install pytest-cov codeclimate-test-reporter
 script:
-  - cp config.yaml.example config.yaml
-  - py.test --cov=slackminion
+  - pip install codeclimate-test-reporter
+  - python setup.py test
 after_script:
   - codeclimate-test-reporter
 notifications:
