--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: python
 python:
   - "2.7"
-script:
+install:
   - pip install codeclimate-test-reporter
+script:
   - python setup.py test
 after_script:
   - codeclimate-test-reporter
