--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,4 @@
 test = pytest
 
 [tool:pytest]
-addopts = --cov=slackminion --cov-config=.coveragerc
+addopts = --cov=slackminion --cov-config=.coveragerc --cov-report term-missing
