remove unused test objects

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,9 @@ test = pytest
 
 [tool:pytest]
 addopts = --cov=slackminion --cov-config=.coveragerc --cov-report term-missing
+
+[flake8]
+select=A,C90,D,E,F,I,P,W
+ignore=E226,E241,E402,W503,P101,P102,P103
+exclude=.cache/*,.pytest_cache/*,.eggs/*
+max-line-length=120
