Stop using setup.py test and install
Both are deprecated:
* https://setuptools.pypa.io/en/latest/history.html#id100
* https://setuptools.pypa.io/en/latest/history.html#id430

Instead use tox, and pip install as recommended here
https://blog.ganssle.io/articles/2021/10/setup-py-deprecated.html#summary

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,4 +23,5 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Tests
       run: |
-        python setup.py test
+        pip install tox
+        tox
