Add isort for import ordering
Instead of requiring developers to group imports by hand use isort
https://github.com/PyCQA/isort

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,15 @@
 [tox]
+envlist = py3, isort
 skipsdist=False
 
 [testenv]
 deps = -r{toxinidir}/test-requirements.txt
 commands =  pytest {posargs}
+
+
+[testenv:isort]
+commands =  isort --check .
+
+
+[isort]
+profile = black
