--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
       - master
 
 jobs:
-  build:
+  'tests':
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -25,3 +25,7 @@ jobs:
       run: |
         pip install tox
         tox
+    - name: Lint
+      run: |
+        pip install tox
+        tox -eisort
