Apply black formatting
Use black to autoformat the code, so when making changes you don't have
to worry about white space etc, and can just use black.

Integrate into tox and the ci lint workflow for validation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
     - name: Tests
       run: |
         pip install tox
-        tox
+        tox -epy3
     - name: Lint
       run: |
         pip install tox
-        tox -eisort
+        tox -eisort,black
