--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py3, isort
+envlist = py3, isort, black
 skipsdist=False
 
 [testenv]
@@ -13,3 +13,9 @@ commands =  isort --check .
 
 [isort]
 profile = black
+
+[testenv:black]
+commands =
+    black --check .
+
+
